# gitsync

./: .gitignore  LICENSE  build.ps1  pyproject.toml
init/one-step/: make-mirror-git-repo-config.json  make-mirror-git-repo.py
init/two-step/: fetch-git-repo-config.json  fetch-git-repo.py  push-git-repo-config.json  push-git-repo.py
sync/: sync-origin-and-mirror-config.json  sync-origin-and-mirror.py
test/: test.py
utils/: __init__.py  cmdutils.py  fileutils.py  logger.py  ssh.py  url.py
