[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitsync"
version = "0.1.0"
description = "Git repository synchronization tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "filelock",
]

[tool.setuptools.packages.find]
include = ["utils*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

